--- a/0x00-html_advanced/2-index.html
+++ b/0x00-html_advanced/2-index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="EN" dir="rtl">
+<html lang="en" dir="ltr">
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
@@ -9,4 +9,5 @@
         <link rel="icon" href="./favicon.png" type="image/png">
     </head>
     <body></body>
+
 </html>
