--- a/0x00-html_advanced/14-index.html
+++ b/0x00-html_advanced/14-index.html
@@ -14,9 +14,8 @@
 
   <body>
     <header>
-      <nav>
-        <span>Techium</span>
-      </nav>
+      <span>Techium</span>      
+      <nav></nav>
     </header>
     <main>
       <h1>Homepage</h1>
