--- a/0x00-html_advanced/17-index.html
+++ b/0x00-html_advanced/17-index.html
@@ -9,21 +9,29 @@
     <title>Homepage - Techium</title>
     <meta name="description" content="Techium is a digital agency" />
     <link rel="icon" type="image/x-icon" href="./favicon.ico" />
-    <link rel="icon" type="image/png" href="./favicon.png" />
+    <link rel="icon" type="image/png" href="./favicon-32x32.png" />
   </head>
 
   <body>
+
+    <!-- Header -->
     <header>
       <div>
         <span>Techium</span>
         <nav></nav>
       </div>
     </header>
+
+    <!-- Main -->
     <main>
       <h1>Homepage</h1>
+
+      <!-- Hero section -->
       <section>
         <div><h2>We help you build your brand!</h2></div>
       </section>
+
+      <!-- Services section -->
       <section>
         <div>
           <header>
@@ -40,6 +48,8 @@
           </div>
         </div>
       </section>
+
+      <!-- Works section -->
       <section>
         <div>
           <header>
@@ -59,6 +69,8 @@
           </div>
         </div>
       </section>
+
+      <!-- About Us section -->
       <section>
         <div>
           <header>
@@ -69,32 +81,34 @@
             <h3>Who are we</h3>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum,
-              omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat
-              est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque
-              maxime cum!
+              omnis expedita! Eum, praesentium cumque accusantium rem, sit
+              quaerat est nisi ratione, deserunt ducimus quidem iste dicta
+              quibusdam atque maxime cum!
             </p>
             <h3>Our culture</h3>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum,
-              omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat
-              est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque
-              maxime cum!
+              omnis expedita! Eum, praesentium cumque accusantium rem, sit
+              quaerat est nisi ratione, deserunt ducimus quidem iste dicta
+              quibusdam atque maxime cum!
             </p>
             <h3>How we work</h3>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum,
-              omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat
-              est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque
-              maxime cum!
+              omnis expedita! Eum, praesentium cumque accusantium rem, sit
+              quaerat est nisi ratione, deserunt ducimus quidem iste dicta
+              quibusdam atque maxime cum!
             </p>
           </div>
         </div>
       </section>
+
+      <!-- Latest news section -->
       <section>
         <div>
-         <header>
+          <header>
             <h2>Latest news</h2>
-         </header>
+          </header>
           <div>
             <article>
               <p>Career</p>
@@ -107,12 +121,14 @@
             </article>
             <article>
               <p>Digital Life</p>
-              <h3>Ut alios omittam, hunc appello, quem ille unum secutus est.</h3>
+              <h3>
+                Ut alios omittam, hunc appello, quem ille unum secutus est.
+              </h3>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tum mihi
-                Piso: Quid ergo? Tum ille: Ain tandem? Non autem hoc: igitur ne
-                illud quidem. Sed quod proximum fuit non vidit. Nos commodius
-                agimus. An nisi populari fama?
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tum
+                mihi Piso: Quid ergo? Tum ille: Ain tandem? Non autem hoc:
+                igitur ne illud quidem. Sed quod proximum fuit non vidit. Nos
+                commodius agimus. An nisi populari fama?
               </p>
             </article>
             <article>
@@ -128,12 +144,14 @@
           </div>
         </div>
       </section>
+
+      <!-- Testimonials section -->
       <section>
         <div>
-         <header>
+          <header>
             <h2>Testimonials</h2>
             <p>We are more than a digital company</p>
-         </header>
+          </header>
           <div>
             <article>Testimonial 1</article>
             <article>Testimonial 2</article>
@@ -141,22 +159,26 @@
           </div>
         </div>
       </section>
+
+      <!-- Contact section -->
       <section>
         <div>
-         <header>
+          <header>
             <h2>Contact</h2>
             <p>We like to know new people</p>
-         </header>
+          </header>
           <div>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id
-              Sextilius factum negabat. Quo tandem modo? At eum nihili facit; Quae
-              contraria sunt his, malane?
+              Sextilius factum negabat. Quo tandem modo? At eum nihili facit;
+              Quae contraria sunt his, malane?
             </p>
           </div>
         </div>
       </section>
     </main>
+
+    <!-- Footer -->
     <footer>
       <div>Footer</div>
     </footer>
