--- a/0x00-html_advanced/22-index.html
+++ b/0x00-html_advanced/22-index.html
@@ -113,7 +113,9 @@
               quibusdam atque maxime cum!
             </p>
           </div>
-          <a href="./about.html">Learn more about us</a>
+
+          <a href="about.html">Learn more about us</a>
+
         </div>
       </section>
 
@@ -188,7 +190,9 @@
               Quae contraria sunt his, malane?
             </p>
           </div>
-          <a href="./contact.html">Get in touch</a>
+
+          <a href="contact.html">Get in touch</a>
+
         </div>
       </section>
     </main>
