--- a/0x00-html_advanced/26-styleguide.html
+++ b/0x00-html_advanced/26-styleguide.html
@@ -28,7 +28,7 @@
       </section>
       <section>
         <header>
-          <h2>Paragraph</.h2>
+          <h2>Paragraph</h2>
         </header>
         <h2>Heading with a subtitle</h2>
         <p>This is my subtitle</p>
