--- a/0x00-html_advanced/26-styleguide.html
+++ b/0x00-html_advanced/26-styleguide.html
@@ -14,6 +14,8 @@
   <body>
     <header></header>
     <main>
+
+      <!-- ==== Headings ==== -->
       <section>
         <header>
           <h2>Headings</h2>
@@ -26,6 +28,8 @@
         <h5>Heading level 5</h5>
         <h6>Heading level 6</h6>
       </section>
+
+      <!-- ==== Paragraph ==== -->
       <section>
         <header>
           <h2>Paragraph</h2>
@@ -37,12 +41,13 @@
         </p>
       </section>
 
-      <!-- ============ List ============== -->
+      <!-- ==== List ==== -->
       <section>
         <header>
           <h2>Lists</h2>
         </header>
         <div>
+
           <h3>Unordered</h3>
           <ul>
             <li>Dolor pulvinar etiam magna etiam.</li>
@@ -63,14 +68,19 @@
             <dd>Definition text.</dd>
 
             <dt>Startup</dt>
-            <dd>A startup company or startup is a company or temporary organization designed to search for a repeatable and scalable business model.</dd>
+            <dd>
+              A startup company or startup is a company or temporary organization designed to search for a repeatable and scalable business model.
+            </dd>
 
             <dt>Water</dt>
-            <dd>A colorless, transparent, odorless liquid that forms the seas, lakes, rivers, and rain and is the basis of the fluids of living organisms.</dd>
+            <dd>
+              A colorless, transparent, odorless liquid that forms the seas, lakes, rivers, and rain and is the basis of the fluids of living organisms.
+            </dd>
           </dl>
         </div>
       </section>
     </main>
     <footer></footer>
+    
   </body>
 </html>
