--- a/0x00-html_advanced/26-styleguide.html
+++ b/0x00-html_advanced/26-styleguide.html
@@ -6,12 +6,11 @@
         <title>Styleguide - Techium</title>
         <meta name="description" content="Techium is a digital agency">
         <link rel="icon" type="image/x-icon" href="./favicon.ico">
-        <link rel="icon" type="image/png" href="./favicon-32x32.png">
+        <link rel="icon" type="image/png" href="./favicon.png">
     </head>
     <body>
 
-        <header>
-        </header>
+        <header></header>
 
         <main>
 
