26. Examples of lists for the styleguide

--- a/0x00-html_advanced/26-styleguide.html
+++ b/0x00-html_advanced/26-styleguide.html
@@ -16,7 +16,6 @@
 
             <!-- === Headings === -->
             <section>
-
                 <header>
                     <h2>Headings</h2>
                 </header>
@@ -32,7 +31,6 @@
 
             <!-- === Paragraph === -->
             <section>
-
                 <header>
                     <h2>Paragraph</h2>
                 </header>
@@ -44,8 +42,7 @@
             </section>
 
             <!-- === Lists === -->
-            <section>
-                
+            <section>                
                 <header>
                     <h2>Lists</h2>
                 </header>
@@ -72,10 +69,14 @@
                         <dd>Definition text.</dd>
 
                         <dt>Startup</dt>
-                        <dd>A startup company or startup is a company or temporary organization designed to search for a repeatable and scalable business model.</dd>
+                        <dd>
+                          A startup company or startup is a company or temporary organization designed to search for a repeatable and scalable business model.
+                        </dd>
 
                         <dt>Water</dt>
-                        <dd>A colorless, transparent, odorless liquid that forms the seas, lakes, rivers, and rain and is the basis of the fluids of living organisms.</dd>
+                        <dd>
+                          A colorless, transparent, odorless liquid that forms the seas, lakes, rivers, and rain and is the basis of the fluids of living organisms.
+                        </dd>
                     </dl>
 
                 </div>
@@ -84,8 +85,7 @@
             
         </main>
 
-        <footer>
-        </footer>
+        <footer></footer>
 
     </body>
 </html>
