31. Address and latest news authors

--- a/0x00-html_advanced/31-index.html
+++ b/0x00-html_advanced/31-index.html
@@ -127,6 +127,7 @@
       </section>
 
       <!-- +++++ Latest news section +++++ -->
+      
       <section>
         <div>
           <header>
@@ -171,13 +172,16 @@
                 Pugnant Stoici cum Peripateticis. Prioris generis est docilitas,
                 memoria; Apparet statim, quae sint officia, quae actiones.
               </p>
-              <small>By Frances J.</small>
+              <small>
+                By Frances J.
+              </small>
             </article>
           </div>
         </div>
       </section>
 
       <!-- +++++ Testimonials section +++++ -->
+      
       <section>
         <div>
           <header>
