36. Add images to your sections

--- a/0x00-html_advanced/36-index.html
+++ b/0x00-html_advanced/36-index.html
@@ -115,8 +115,8 @@
             <img
               src="images/pic-about-us.jpg"
               alt=""
-              width="460px"
-              height="447px"
+              width="460"
+              height="447"
             />
 
             <h3>Who are we</h3>
@@ -162,8 +162,8 @@
                 <img
                   src="images/pic-blog-01.jpg"
                   alt=""
-                  width="305px"
-                  height="205px"
+                  width="305"
+                  height="205"
                 />
               </div>
               <h3><a href="#">Hoc loco tenere se Triarius non potuit.</a></h3>
@@ -181,8 +181,8 @@
                 <img
                   src="images/pic-blog-02.jpg"
                   alt=""
-                  width="305px"
-                  height="205px"
+                  width="305"
+                  height="205"
                 />
               </div>
               <h3>
@@ -206,8 +206,8 @@
                 <img
                   src="images/pic-blog-03.jpg"
                   alt=""
-                  width="305px"
-                  height="205px"
+                  width="305"
+                  height="205"
                 />
               </div>
               <h3><a href="#">Bestiarum vero nullum iudicium puto.</a></h3>
@@ -237,7 +237,7 @@
                 src="images/pic-person-01.jpg"
                 alt="Yuri Y. avatar"
                 width="100px"
-                heigth="100px"
+                height="100px"
               />
               <blockquote>
                 I am completely blown away. Thanks to Techium, we've just
@@ -251,7 +251,7 @@
                 src="images/pic-person-02.jpg"
                 alt="Dorrie S. avatar"
                 width="100px"
-                heigth="100px"
+                height="100px"
               />
               <blockquote>
                 Thank you so much for your help. Techium company is awesome!
@@ -264,7 +264,7 @@
                 src="images/pic-person-03.jpg"
                 alt="Sven H. avatar"
                 width="100px"
-                heigth="100px"
+                height="100px"
               />
               <blockquote>
                 I love your system. Definitely worth the investment. I'd be lost
