--- a/0x00-html_advanced/33-styleguide.html
+++ b/0x00-html_advanced/33-styleguide.html
@@ -163,31 +163,35 @@
 
         <table>
           <h3>Star Wars Trilogy Data</h3>
+          <thead>
+            <tr>
+              <th scope="col">Title</th>
+              <th scope="col">Director</th>
+              <th scope="col">Release Date</th>
+            </tr>
+          </thead>
 
-          <tr>
-            <th scope="col">Title</th>
-            <th scope="col">Director</th>
-            <th scope="col">Release Date</th>
-          </tr>
+          <tbody>
+            <tr>
+              <th scope="row">Star Wars: Episode IV - A New Hope</th>
+              <td>George Lucas</td>
+              <td>May 25th, 1977</td>
+            </tr>
 
-          <tr>
-            <th scope="row">Star Wars: Episode IV - A New Hope</th>
-            <td>George Lucas</td>
-            <td>May 25th, 1977</td>
-          </tr>
+            <tr>
+              <th scope="row">
+                Star Wars: Episode V - The Empire Strikes Back
+              </th>
+              <td>Irvin Kershner</td>
+              <td>May 21st, 1980</td>
+            </tr>
 
-          <tr>
-            <th scope="row">Star Wars: Episode V - The Empire Strikes Back</th>
-            <td>Irvin Kershner</td>
-            <td>May 21st, 1980</td>
-          </tr>
-
-          <tr>
-            <th scope="row">Star Wars: Episode VI - Return of the Jedi</th>
-            <td>Richard Marquand</td>
-            <td>May 25th, 1983</td>
-          </tr>
-          
+            <tr>
+              <th scope="row">Star Wars: Episode VI - Return of the Jedi</th>
+              <td>Richard Marquand</td>
+              <td>May 25th, 1983</td>
+            </tr>
+          </tbody>
         </table>
       </section>
     </main>
