--- a/0x00-html_advanced/33-styleguide.html
+++ b/0x00-html_advanced/33-styleguide.html
@@ -162,7 +162,7 @@
         </header>
 
         <table>
-          <h3>Star Wars Trilogy Data</h3>
+          <caption>Star Wars Trilogy Data</caption>
           <thead>
             <tr>
               <th scope="col">Title</th>
